--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,7 @@
 name: Asteroids
 dependencies:
-  - python>=3.6.0
+  - python==3.6.6
+
+  - pylint
   - pip:
-    - pygame>=1.9.0
+    - pygame==1.9.4
