--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,11 @@
 name: Asteroids
+channels:
+  - defaults
 dependencies:
   - python=3.6.7
+  - pip=19.1.1
 
-  - pylint
+  - pylint=2.3.1
 
   - pip:
     - pygame==1.9.4
